--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -409,6 +409,7 @@ html {
     background-color: #fff;
     width: 900px;
     position: relative;
+    animation: modalFaceIn ease 0.5s;
   }
   
   .modal-header {
@@ -491,3 +492,15 @@ html {
       color: #2196F3;
   }
 
+
+  @keyframes modalFaceIn {
+    from{
+      opacity: 0;
+      transform: translateY(-100px);
+    }
+    to{
+      opacity: 1;
+      transform: translateY(0);
+    }
+    
+  }
